fix: ajustando SecurityConfig