@@ -3,12 +3,15 @@ package com.rafacar.config;
 import java.util.Arrays;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
 @Configuration
 @EnableWebSecurity
@@ -17,15 +20,10 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // Aplica a configuração de CORS definida abaixo
+                // Usa a CorsConfigurationSource abaixo
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // Desabilita a proteção CSRF, que não é necessária para APIs REST stateless
                 .csrf(csrf -> csrf.disable())
-
-                // Configura as regras de autorização
                 .authorizeHttpRequests(authorize -> authorize
-                        // Permite todas as requisições sem autenticação.
                         .anyRequest().permitAll()
                 );
 
@@ -34,16 +32,27 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        // Permite requisições de QUALQUER origem
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        // Permite todos os métodos HTTP (GET, POST, PUT, DELETE, OPTIONS, etc.)
-        configuration.setAllowedMethods(Arrays.asList("*"));
-        // Permite todos os cabeçalhos
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        CorsConfiguration config = new CorsConfiguration();
+
+        // Use allowedOriginPatterns para aceitar ORIGENS com wildcard (mais robusto que setAllowedOrigins("*"))
+        // Em dev você pode usar Arrays.asList("http://127.0.0.1:5501") explicitamente
+        config.setAllowedOriginPatterns(Arrays.asList("*")); // ou List.of("http://127.0.0.1:5501")
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setExposedHeaders(Arrays.asList("Access-Control-Allow-Origin", "Authorization", "Content-Type"));
+        config.setAllowCredentials(true); // se usa cookies/Authorization, caso contrário pode ser false
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
+    }
+
+    // Registrar o CorsFilter explicitamente em ordem alta para garantir que os headers sejam aplicados
+    @Bean
+    public FilterRegistrationBean<CorsFilter> corsFilterRegistrationBean(CorsConfigurationSource source) {
+        CorsFilter filter = new CorsFilter(source);
+        FilterRegistrationBean<CorsFilter> bean = new FilterRegistrationBean<>(filter);
+        bean.setOrder(Ordered.HIGHEST_PRECEDENCE); // ordem 0 (muito alta)
+        return bean;
     }
 }
